Pages are printing shit out, yey

--- a/Weather/Weather/Views/AboutPage.xaml
+++ b/Weather/Weather/Views/AboutPage.xaml
@@ -16,7 +16,7 @@
             <Label.FormattedText>
                 <FormattedString>
                     <FormattedString.Spans>
-                        <Span Text="Created by Martin Lenart"/>
+                        <Span Text="Created by Kaveh Jaliliyan"/>
                     </FormattedString.Spans>
                 </FormattedString>
             </Label.FormattedText>
